--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -34,7 +34,7 @@
 <ol>
     {{#games}}
         <li>
-            {{name}} {{platform}} {{releaseYear}}
+            {{name}} {{genre}} {{platform}} {{releaseYear}}
         </li>
     {{/games}}
 </ol>
